debugging issue on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
+html, body { 
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
 
 @font-face {
   font-family: "Shadows Into Light";
@@ -47,7 +54,7 @@
 
 .custom-shape-divider-bottom-1632667082 {
   position: absolute;
-  bottom: 0;
+  bottom: -5px;
   left: 0;
   width: 100%;
   overflow: hidden;
